<resources>
    <string name="app_name">Daily Finances</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="btn_dailyfinance">Daily Finance</string>

    <string name="btn_save">Save</string>
    <string name="btn_clear">Reset</string>

    <string name="btn_collection">Collection</string>


    <string name="msg_enter_name">Enter Name</string>
    <string name="msg_enter_mobileno">Enter MobileNo</string>
    <string name="msg_enter_amt">Enter Amount</string>
    <string name="about_us">Fusil Solutions Pvt Ltd</string>
    <string name="AboutUs">FUSIL SOLUTIONS PRIVATE LTD.\nHyderabad,India.\nPhone: +91 040 23605555,\n\t\t\t\t\t\t\t+91 9703188885,
        \nWebsite: www.fusilsolutions.com\nEmail: Support@fusil.in</string>


    <string name="nav_head_title">Daily Finances</string>
    <string name="nav_head_subtitle">Fusil Solution Pvt Ltd</string>


    <string name="nav_draw_trans_finances">Daily Finances</string>
    <string name="nav_draw_trans_collections">Collections</string>

    <string name="nav_draw_finances_report">Daily Finances Report</string>
    <string name="nav_draw_collections_report">Collections Report</string>
    <string name="nav_draw_act_fin_report">Active Daily Finances Report</string>
    <string name="nav_draw_memwise_report">MemberWise Daily Finances Report</string>
    <string name="nav_draw_pend_report">Pending Colections Report</string>


    <string name="nav_draw_aboutus">About us</string>
    <string name="nav_draw_appinfo">App info</string>
    <string name="nav_draw_poweredby">Powered by FusilSolutions pvt ltd</string>

    <string name="nav_draw_trans_title">Transactions</string>
    <string name="nav_draw_report_title">Reports</string>

    <string name="ReleaseDate">11-10-2019</string>
    <string name="VersionNo">1.0</string>

</resources>
